--- a/style.css
+++ b/style.css
@@ -1611,11 +1611,15 @@ div#article-parent {
 /*.track_list*/
 .action-home-index #content .track-card-list-block{
     background: url("images/bg-pessoas.jpg") no-repeat center top transparent;
-	 padding: 4em 0;
+	 padding: 2em 0 0;
+}
+
+.action-home-index #content .block-footer-content {
+    margin-bottom: 15px;
+    margin-top: -5px;
 }
 
 #content .track-card-list-block{
-
     display: block;
     overflow: hidden;
     padding: 4em 2em;
@@ -1631,7 +1635,7 @@ div#article-parent {
 all_tracks .track_list {
 	background-image: url("images/no-image.gif") no-repeat center top transparent;
 }
-
+/*
 .track_list .view_all {
 	background-image: url("images/button-read-more-vazio.png") no-repeat center top transparent;
 	width: 161px;
@@ -1639,6 +1643,18 @@ all_tracks .track_list {
 	color: #000;
 	font-weight: bold;
 	padding-left: 50px;
+}
+*/
+.action-home-index  #content .box-1 .block-footer-content .view_all a{
+    background: url("images/button-read-more-vazio.png") no-repeat scroll left 50% transparent;
+    color: #000000;
+    display: inline-block;
+    font-weight: bold;
+    /*height: 39px;*/
+	 padding: 10px 20px 10px 50px;
+    text-align: left;
+    margin-right: 45px;
+	
 }
 
 .track_list .item_card {
@@ -1651,6 +1667,10 @@ all_tracks .track_list {
 	 height: 100%;
     min-height: 335px;
 	 display: inline-block;
+}
+
+.action-home-index .track_list .item_card {
+	margin: 10px 15px 0;
 }
 
 .track_list .item_card a{
@@ -1928,6 +1948,7 @@ _software,_cultura_e_conhecimentos_livres*/
     vertical-align: middle;
 	 border-bottom: 0 none;
 	 vertical-align: top;
+	 min-width: 80%;
 	 max-width: 600px;
 }
 
