Fix header search form

--- a/header.rhtml
+++ b/header.rhtml
@@ -48,8 +48,8 @@
       </div>
 
       <div role="search" id="portal-searchbox">
-        <form>
-          <input type="text" autocomplete="off" name="SearchableText" size="18" title="Buscar no Site" placeholder="Buscar no Site" accesskey="3" class="searchField" id="searchGadget">
+        <form action="/search">
+          <input type="text" autocomplete="off" name="query" size="18" title="Buscar no Site" placeholder="Buscar no Site" accesskey="3" class="searchField" id="searchGadget">
           <input type="submit" class="searchButton" value="Buscar"></form>
       </div>
 
