--- a/style.css
+++ b/style.css
@@ -2556,12 +2556,16 @@ _software,_cultura_e_conhecimentos_livres*/
 }
 
 /*bonequinho do login - IE FIX*/
+#user a {
 
-#user a i.icon-menu-logout {
+}
+
+#user a i {
 	top: 0px; 
 	width: 16px; 
 	height: 16px; 
 	margin-right: 7px; 
 	vertical-align: middle; 
 	display: inline-block;
+	position: static;
 }
